<resources>
    <string name="app_name">PaymentWindow</string>
    <string name="pay">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="cardholders_name">Cardholders Name</string>
    <string name="enter_name">Enter name</string>
    <string name="card_number_label">Card Number</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="month_label">Month</string>
    <string name="year_label">Year</string>
    <string name="cvv_label">CVV</string>
    <string name="month_hint">00</string>
    <string name="cvv_hint">000</string>
</resources>